cmake_minimum_required(VERSION 3.10)

add_executable(bellman_ford bellman_ford.cpp)
add_executable(dijkstra dijkstra.cpp)
add_executable(prim prim.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(warshall_floyd warshall_floyd.cpp)
add_executable(topological_sort topological_sort.cpp)
add_executable(hamiltonian_path_num hamiltonian_path_num.cpp)
add_executable(tree_diameter tree_diameter.cpp)