cmake_minimum_required(VERSION 3.10)

add_executable(gcd gcd.cpp)
add_executable(ext_gcd ext_gcd.cpp)
add_executable(prime prime.cpp)
add_executable(mod mod.cpp)
add_executable(combination combination.cpp)
add_executable(gauss_jordan_real gauss_jordan_real.cpp)
add_executable(gauss_jordan_mod gauss_jordan_mod.cpp)
add_executable(chinese_rem chinese_rem.cpp)